--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   border: 1px solid rgba(0, 0, 0, .2);
-  background-color: white;
+  background-color: #ca9650;
 }
 
 .modal-header {
@@ -23,6 +23,7 @@
   justify-content: space-between;
   min-width: 300px;
   padding: 1rem;
+  background-color: white;
   border-bottom: 1px solid #e9ecef;
   font-weight: 700;
   font-size: 22px;
